          (http://www.packetfence.org/mantis/view.php?id=542)
        Added trace log level to test/connect_and_read
        Cisco Catalyst 2950 and getRegExpFromList
          (http://www.packetfence.org/mantis/view.php?id=544)
        Added SNMPVersion and SNMPVersionTrap checks
          (http://www.packetfence.org/mantis/view.php?id=543)
        Added view on switches.conf to web admin GUI

1.7.6
        violations created through bin/pfdetect do not lead to 
          VLAN change
          (http://www.packetfence.org/mantis/view.php?id=496)
        issues with MAC addresses in capital
          (http://www.packetfence.org/mantis/view.php?id=498)
        add error checks to flip.pl
          (http://www.packetfence.org/mantis/view.php?id=497)
        Cisco wireless controller deauthentication
          (http://www.packetfence.org/mantis/view.php?id=499)
        show computername in Violation - View
          (http://www.packetfence.org/mantis/view.php?id=500)
        show open violations in Node - View
          (http://www.packetfence.org/mantis/view.php?id=501)
        added node categories
        extended node view filters from categories to pid
        added node view limit clause
        added node view order by clause
        added node count
        pfcmd grammar allowed trailing, unmatched characters
          (http://packetfence.org/mantis/view.php?id=504)
        change filter in web admin gui from POST to GET
          (http://packetfence.org/mantis/view.php?id=505)
        adapted web admin GUI to take advantage of new node
          SQL filters, order by and limit clauses
        pfcmd report and grammar issues
          (http://packetfence.org/mantis/view.php?id=506)
        ui dashboard grammar is not precise
          (http://packetfence.org/mantis/view.php?id=507)
        major cleanup in pfcmd grammar

1.7.5
        pfsetvlan should check that MAC field is filled before
          calling custom_isClientAlive