@@ -174,6 +174,8 @@
         Added SNMPVersion and SNMPVersionTrap checks
           (http://www.packetfence.org/mantis/view.php?id=543)
         Added view on switches.conf to web admin GUI
+        fixed configuration/instructions.php error handling
+          (http://www.packetfence.org/mantis/view.php?id=546)
 
 1.7.6
         violations created through bin/pfdetect do not lead to 
